<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f7f7f7"
            android:gravity="center"
            android:text="@string/shopping_cart"
            android:textColor="#e6000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mTvEdit_shoppingCart"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/edit_cart"
            android:textColor="#292421" />

        <TextView
            android:id="@+id/mTvCancelEdit"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/edit_exit"
            android:textColor="#292421" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="#C0C0C0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/mDeleteManyLoading"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp" />

        <ExpandableListView
            android:id="@+id/cart_expandableListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp"
            android:scrollbars="none" />

        <!--购物车为空提示-->
        <LinearLayout
            android:id="@+id/layout_empty_shoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@mipmap/empty_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-10dp"
                android:text="@string/empty_shoppingCart"
                android:textSize="18sp"
                android:typeface="monospace" />

        </LinearLayout>

        <!--请求失败提示-->
        <LinearLayout
            android:id="@+id/layout_shoppingCart_noResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@mipmap/request_fail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-10dp"
                android:text="@string/request_fail"
                android:textSize="18sp"
                android:typeface="monospace" />

        </LinearLayout>


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e8e8e8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#f7f7f7"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cart_cb_allSelected"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:background="@drawable/checkbox_bg"
            android:button="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/all_selected"
            android:textColor="#000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/mLvSelectedGoodsPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_selectedCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:text="@string/init_selected_count"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_money"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/cart_selectedMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_selected_money"
                        android:textColor="#E8321D"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <Button
                    android:id="@+id/cart_bt_countMoney"
                    android:layout_width="119dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bt_count_money"
                    android:text="@string/count_money"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/mLvDeleteMany"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/clear_shoppingCart"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/tv_clear_cart"
                    android:gravity="center"
                    android:text="@string/clear_shoppingCart"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/deleteMany_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/tv_clear_cart"
                    android:gravity="center"
                    android:text="@string/deleteMany_shoppingCart"
                    android:textColor="#000000"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>